[package]
name = "mcp-addition"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rmcp = { version = "0.8.1", features = ["server", "macros", "transport-io", "elicitation", "schemars"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std", "fmt"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
